<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StudioFragment">
    <com.example.msdpaint.Paper
        android:id="@+id/paper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="42dp" />
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#EEEEEE"
        android:padding="8dp" >
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="Back to home arrow button"
            android:src="@drawable/back_arrow"
            android:background="@null"
            android:scaleType="fitCenter" />
        <ImageButton
            android:id="@+id/shapeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="Select Shape"
            android:src="@drawable/shapes"
            android:background="@null"
            android:scaleType="fitCenter" />
        <ImageButton
            android:id="@+id/marbleButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="Marble Mode"
            android:src="@drawable/marble"
            android:background="@null"
            android:scaleType="fitCenter"
            app:tint="@color/studio_button_png" />
        <ImageButton
            android:id="@+id/brushSizeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="Select Brush Width"
            android:src="@drawable/thickness"
            android:background="@null"
            android:scaleType="fitCenter" />
        <ImageButton
            android:id="@+id/colorButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="Select Color"
            android:src="@drawable/palette"
            android:background="@null"
            android:scaleType="fitCenter" />
        <ImageButton
            android:id="@+id/threeDotButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="More options"
            android:src="@drawable/three_dot_menu"
            android:background="@null"
            android:scaleType="fitCenter" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
