<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="20dip"
    android:layout_height="202dip"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/popup_menu_background">

    <ImageView
        android:id="@+id/eraser"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/eraser"
        android:layout_gravity="center"
        android:padding="8dp"/>

    <SeekBar
        android:id="@+id/seekBarVertical"
        android:layout_height="200dip"
        android:layout_width="200dip"
        android:rotation="270"/>

</LinearLayout>